# uw_realtime_stt

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
src/uw_realtime_stt/: buffer.py  distil_whisper.py  hf.json  main.py  print_document.py  runtime_test.py  stt.py  test.py
src/uw_realtime_stt/tests/: execution_time_log.txt
