[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[options]
include_package_data = true
package_dir = {"" = "src"}
packages = ["uw_realtime_stt"]

[project]
name = "uw_realtime_stt"
version = "0.1.0-alpha"
description = "Practice playing blindfold chess"
requires-python = ">=3.9"
license = {file = "LICENSE"}
urls = {source = "https://github.com/kfmh/uw-chess"}

dependencies = [
    "pydub==0.25.1",
    "python-dotenv==1.0.0",
    "PyAudio==0.2.14",
    "pygame==2.5.2",
    "gTTS==2.4.0",
    "setuptools==69.0.2",
    "numpy==1.25",
    "torch==2.1.2",
    "transformers==4.36.2",
    "accelerate==0.25.0"
]

[project.scripts]
uw_realtime_stt = "uw_realtime_stt.main:main"

